# byop_final

./: README.md  app_f.py  fault_model_stabilized.pth  gat_model_complete.pth  main.py  model_utils.py  pyproject.toml  requirements.txt
notebook/: 01_Data_Engineering.ipynb  01_Data_Loader_SEGY.ipynb  02_Model_Training.ipynb  02_Vision_UNet_Training.ipynb  FINAL.IPYNB  fault_analysis_video.avi  fault_detection_movie.avi  fault_model_stabilized.pth  gat_model_complete.pth
